# simlog

./: .gitignore  README.md  compare.py  demo.py  main.py  numerical_engine.py  pyproject.toml  requirements.txt  simulation.py  storage.py  test.py  test_basic.csv
.github/workflows/: simlog.yml
simai/: analyzer.py  parser.py  summarizer.py  visualizer.py
simlog/: __init__.py  cli.py  schema.py  simulation.py  tracker.py
simlog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
