[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simlog-core"
version = "0.1.0"
description = "CSV analysis + simulation logging tools"
authors = [{ name = "Vikram" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/goel12133/simlog"

[tool.setuptools.packages.find]
include = ["simai", "simlog"]

[project.scripts]
simlog = "simlog.cli:main"
